--- a/createChallenge.html
+++ b/createChallenge.html
@@ -191,6 +191,7 @@
                                 <option value="3"> 3 (Moderate) </option>
                                 <option value="4"> 4 (Kind of Hard) </option>
                                 <option value="5"> 5 (Hard) </option>
+                                testeteaohfia
                             </select>
                             Duration (how many days)
                             <input type="number" name="length" min="1" max="60" >
