--- a/createChallenge.html
+++ b/createChallenge.html
@@ -192,6 +192,7 @@
                                 <option value="4"> 4 (Kind of Hard) </option>
                                 <option value="5"> 5 (Hard) </option>
                                 testeteaohfia
+                                ahfoiahfioag
                             </select>
                             Duration (how many days)
                             <input type="number" name="length" min="1" max="60" >
