--- a/createChallenge.html
+++ b/createChallenge.html
@@ -193,6 +193,7 @@
                                 <option value="5"> 5 (Hard) </option>
                                 testeteaohfia
                                 ahfoiahfioag
+                                aoifhoai
                             </select>
                             Duration (how many days)
                             <input type="number" name="length" min="1" max="60" >
