--- a/createChallenge.html
+++ b/createChallenge.html
@@ -194,6 +194,7 @@
                                 testeteaohfia
                                 ahfoiahfioag
                                 aoifhoai
+                                ahosifhao
                             </select>
                             Duration (how many days)
                             <input type="number" name="length" min="1" max="60" >
