--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
+
+
 <html>
 <body>
 
-	<canvas id="canvas" width="800" height="600"></canvas>
+	<!-- <canvas id="canvas" width="800" height="600"></canvas> -->
 
+	<style type="text/css">
+		body {
+			background-image: radial-gradient(#333738,#0a0c0c);
+    	}
+	</style>
+	<script src='../lib/three.js'></script>
+	<script src="ImprovedNoise.js"></script>
 	<script src="main.js"></script>
 
 </body>
