--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			background-image: radial-gradient(#333738,#0a0c0c);
     	}
 	</style>
-	<script src='../lib/three.js'></script>
+	<script src='lib/three.js'></script>
 	<script src="ImprovedNoise.js"></script>
 	<script src="main.js"></script>
 
