more experimentation with beat detection, new visuals

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
 	<style type="text/css">
 		body {
-			background-image: radial-gradient(#333738,#0a0c0c);
+			/*background-image: radial-gradient(#333738,#0a0c0c);*/
+			background: url("paper-texture.jpg") no-repeat center center fixed;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
     	}
 	</style>
 	<script src='../lib/three.js'></script>
