--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</style>
 	<script src='lib/three.js'></script>
 	<script src="ImprovedNoise.js"></script>
-	<script src="main.js"></script>
+	<script src="main2.js"></script>
 
 </body>
 </html>
