--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 	</style>
 	<script src='lib/three.js'></script>
 	<script src="ImprovedNoise.js"></script>
-	<script src="main2.js"></script>
+	<script src="main4.js"></script>
+
+	<script src="lib/dat.gui.min.js"></script>
+	<script src="lib/media.js"></script>
+	<script src="lib/app-utils.js"></script> 
+	<script src="modernizr.js"></script>
+
+	<canvas id="displayCanvas" width="1024px" height="576px">
+        Your browser does not support HTML5 canvas.
+    </canvas>
 
 </body>
 </html>
