smoothing the fabric

--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
+<!doctype html>
+<html lang="en">
 
+<head>
+	<meta charset="UTF-8">
+	<title>HTML5 Canvas</title>
+</head>
 
-<html>
 <body>
-
-	<!-- <canvas id="canvas" width="800" height="600"></canvas> -->
-
-	<style type="text/css">
-		body {
-			/*background-image: radial-gradient(#333738,#0a0c0c);*/
-			background: url("paper-texture.jpg") no-repeat center center fixed;
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
-			background-size: cover;
-    	}
-	</style>
-	<script src='lib/three.js'></script>
-	<script src="ImprovedNoise.js"></script>
-	<script src="main4.js"></script>
-
-	<script src="lib/dat.gui.min.js"></script>
-	<script src="lib/media.js"></script>
-	<script src="lib/app-utils.js"></script> 
-	<script src="modernizr.js"></script>
-
-	<canvas id="displayCanvas" width="1024px" height="576px">
-        Your browser does not support HTML5 canvas.
+    <canvas id="displayCanvas" width="1024px" height="576px">
     </canvas>
 
+    <script src="Modernizr/modernizr-2.0.6.js"></script>
+	<script src='lib/three.js'></script>
+	<script src="fabric.js"></script>
 </body>
 </html>
