--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    <canvas id="displayCanvas" width="1024px" height="576px">
-    </canvas>
+	<div id='wrapper' style='width: 200px; height: 200px'>
+	    <canvas id="displayCanvas" width="1024px" height="576px"></canvas>
+	</div>
 
     <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
