--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <canvas id="displayCanvas" width="1024px" height="576px">
     </canvas>
+    <canvas id="canvas" width="1024px" height="576px">
+    </canvas>
 
     <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
