--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 	<div id='wrapper' style='width: 200px; height: 200px'>
 	    <canvas id="displayCanvas" width="1024px" height="576px"></canvas>
+	    <!-- <canvas id="canvas" width="1024px" height="576px"></canvas> -->
 	</div>
 
     <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
-	<script src="fabric.js"></script>
+	<script src="generative.js"></script>
 </body>
 </html>
