some attempts at a random walker

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-	<div id='wrapper' style='width: 200px; height: 200px'>
-	    <canvas id="displayCanvas" width="1024px" height="576px"></canvas>
-	</div>
+	<canvas id="canvas"></canvas>
 
-    <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
-	<script src="fabric.js"></script>
+	<script src="main7.js"></script>
 </body>
 </html>
