--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
     <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
-	<script src="generative.js"></script>
+	<script src="generative3.js"></script>
 </body>
 </html>
