randomized petal colours

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<style type="text/css">
+		body {
+			background-image: radial-gradient(#333738,#0a0c0c);
+    	}
+	</style>
 	<!-- <div id='wrapper' style='width: 200px; height: 200px'> -->
 	    <!-- <canvas id="displayCanvas" width="1400" height="600"></canvas> -->
 	    <!-- <canvas id="canvas" width="1024px" height="576px"></canvas> -->
