all together now ✿ヾ╲(｡◕‿◕｡)╱✿

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>HTML5 Canvas</title>
+	<title>Generative Flower</title>
 </head>
 
 <body>
@@ -12,10 +12,6 @@
 			background-image: radial-gradient(#333738,#0a0c0c);
     	}
 	</style>
-	<!-- <div id='wrapper' style='width: 200px; height: 200px'> -->
-	    <!-- <canvas id="displayCanvas" width="1400" height="600"></canvas> -->
-	    <!-- <canvas id="canvas" width="1024px" height="576px"></canvas> -->
-	<!-- </div> -->
 
     <script src="Modernizr/modernizr-2.0.6.js"></script>
 	<script src='lib/three.js'></script>
